Updated angular version from 7 to 9, Staxter specific changes

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,8 +1,8 @@
 {
-  "SITE_NAME": "Real Starter",
-  "SITE_NAME_SHORT": "Real Starter",
+  "SITE_NAME": "STAXTER",
+  "SITE_NAME_SHORT": "STAXTER",
   "DASHBOARD": "Dashboard",
-  "DASHBOARD_TITLE": "Willkommen zu Real Starter",
+  "DASHBOARD_TITLE": "Dashboard",
   "PAGE_2": "Page 2",
   "LOGOUT": "Logout",
   "SCROLL_TO_TOP": "Nach oben scrollen"
