--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,8 +1,8 @@
 {
-  "SITE_NAME": "Real Starter",
-  "SITE_NAME_SHORT": "Real Starter",
+  "SITE_NAME": "STAXTER",
+  "SITE_NAME_SHORT": "STAXTER",
   "DASHBOARD": "Dashboard",
-  "DASHBOARD_TITLE": "Welcome to Real Starter",
+  "DASHBOARD_TITLE": "Dashboard",
   "PAGE_2": "Page 2",
   "LOGOUT": "Logout",
   "SCROLL_TO_TOP": "Scroll to top"
