--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -16,5 +16,7 @@
   "TOP_FIVE_TABLE_COLUMN_DIFFERENCE": "Differenz",
   "TOP_FIVE_TABLE_COLUMN_DIFFERENCE_PERCENTAGE": "%",
   "TAB_HEADER_INCREASE": "Erhöhen",
-  "TAB_HEADER_DECREASE": "Verringern"
+  "TAB_HEADER_DECREASE": "Verringern",
+  "LAST_30_DAYS_TITLE": "Letzte 30 Tage",
+  "BACK": "Zurück"
 }
