Developed last 30 days page

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,5 +18,6 @@
   "TAB_HEADER_INCREASE": "Erhöhen",
   "TAB_HEADER_DECREASE": "Verringern",
   "LAST_30_DAYS_TITLE": "Letzte 30 Tage",
-  "BACK": "Zurück"
+  "BACK": "Zurück",
+  "COMPARISON_CURRENCY": "Vergleichswährung"
 }
