--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,5 +18,6 @@
   "TAB_HEADER_INCREASE": "Increase",
   "TAB_HEADER_DECREASE": "Decrease",
   "LAST_30_DAYS_TITLE": "Last 30 days",
-  "BACK": "Back"
+  "BACK": "Back",
+  "COMPARISON_CURRENCY": "Comaprison currency"
 }
