Corrected spelling for comparison

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,5 +19,5 @@
   "TAB_HEADER_DECREASE": "Decrease",
   "LAST_30_DAYS_TITLE": "Last 30 days",
   "BACK": "Back",
-  "COMPARISON_CURRENCY": "Comaprison currency"
+  "COMPARISON_CURRENCY": "Comparison currency"
 }
